--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
   </head>
   <body>
       <div id="root"></div>
-      <script>
-          window.__FIREBASE_CONFIG__ = {
-              apiKey: "AIzaSyCQH1-GRq8H6vTKza_sMIUnBK9Hrys513E",
-              authDomain: "taphr-sales-game.firebaseapp.com",
-              projectId: "taphr-sales-game",
-              storageBucket: "taphr-sales-game.appspot.com",
-              messagingSenderId: "729312633588",
-              appId: "1:729312633588:web:bc15d1663b2a758bfab4a1",
-              measurementId: "G-CXCBJ4NJPT" // optional, fine to leave
-          };
-      </script>
+     <script>
+  window.__FIREBASE_CONFIG__ = {
+    apiKey: "AIzaSyCQH1-GRq8H6vTKza_sMIUnBK9Hrys513E",
+    authDomain: "taphr-sales-game.firebaseapp.com",
+    projectId: "taphr-sales-game",
+    storageBucket: "taphr-sales-game.appspot.com",
+    messagingSenderId: "729312633588",
+    appId: "1:729312633588:web:bc15d1663b2a758bfab4a1",
+    measurementId: "G-CXCBJ4NJPT"
+  };
+
+  window.__ALLOWED_DOMAIN__ = "taphr.com.au";
+</script>
+
 
       <script type="module" src="/src/main.jsx"></script>
   </body>
